--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -60,16 +60,16 @@
   <p>
     <em>"Why the hell is it important?"</em>, you might be wondering.
   </p>
-  -->
 
   <h3>You need people who ask the right questions ...</h3>
   <ul class="list-unstyled">
-    <li>I don't think in is-possible or not. I believe anything is possible, the question is what the opportunity cost is.</li>
+    <li><i class="fa fa-thumbs-up"></i> I'm not stuck in the possible/impossible dichotomy. I believe <strong>anything is possible</strong>, just some things need more resources than others.</li>
   </ul>
+  -->
 
   <h3 class="exclamation"><i class="fa fa-exclamation"></i> I don't work for everyone ...</h3>
-  <p>
-    The only way I can make sure I'm delivering the best results consistently over time is being selective about the projects I'm working on.
+  <p class="highlight">
+    The only way I can make sure I'm <strong>delivering the best results consistently</strong> over time is <strong>working on what I'm passionate about</strong>. That means being selective about the projects I'm working on.
   </p>
 
   <p>
@@ -82,11 +82,11 @@
 
   <h3>What are my values?</h3>
   <p>
-    I believe in <strong>constant learning</strong>. I read many blogs, books and attend meetups and conferences about <mark>IT</mark>, <mark>start-ups</mark> and <mark>self-development</mark>.
+    I believe in <strong>constant learning</strong>. I read many blogs, books and attend meetups and conferences about <strong>IT</strong>, <strong>start-ups</strong> and <strong>self-development</strong>.
   </p>
 
   <p>
-    I believe in <strong>simplicity</strong>. In start-ups it's important to deliver fast. Complicated systems take long to develop and maintain.
+    I believe in <strong>simplicity</strong>. In start-ups it's important to <em>deliver fast</em>. Complicated systems take long to develop and maintain.
   </p>
 
   <p>
@@ -94,22 +94,24 @@
   </p>
 
   <p>
-    Does your company have similar values?
+    Does your company have similar values? If so, then ...
   </p>
 
   <div class="text-center">
     <a role="button" href="mailto:{{email}}?subject={{emailSubject | encodeURIComponent}}&body={{emailBody | encodeURIComponent}}" class="btn btn-lg btn-success">Get in touch now!</a>
   </div>
 
+  <!--
   <h3>Why contractors are good for your company?</h3>
   <p class="highlight">
     There's a lot of myths about contractors out there. I don't understand why.
     From my experience, contractors are usually the most knowledgeable people.
   </p>
+  -->
 
   <h3><i class="fa fa-check"></i> My rate is affordable ...</h3>
   <p>
-    Now with my experience you probably think that I charge some crazy money like £2k per day, but I don't! I want my services to be not just of the highest quality, but also affordable, so I charge only £{{rate}} per day which is merely <a href="http://www.itjobswatch.co.uk/contracts/london/senior%20ruby%20on%20rails%20developer.do">the average rate in London</a>. It's the equivalent of ${{rateInUSD}} per hour.
+    Now with my experience you probably think that I charge some crazy money like £2k per day, but I don't! I want my services to be not just of the highest quality, but also <abbr title="I know it sounds suspicious, but this way I can choose from much wider range of projects and really work on what I enjoy most.">affordable</abbr>, so I charge only £{{rate}} per day which is merely <a href="http://www.itjobswatch.co.uk/contracts/london/senior%20ruby%20on%20rails%20developer.do">the average rate in London</a>! It's the equivalent of ${{rateInUSD}} per hour.
   </p>
 
   <p>
