Hell, let's add a mailing list to capture leads!

--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -49,7 +49,7 @@
   </p>
 
   <p>
-    Another big reason to be part of the start-up scene is that <strong>I love to be around smart people</strong> who have a purpose. I learnt so much from people who were smarter than me.
+    Another big reason to be part of the start-up scene is that <strong>I love to be around smart people</strong> who have a purpose. I've learnt so much from people who were smarter than me.
   </p>
 
   <!--
@@ -145,7 +145,7 @@
   </p>
 
   <p>
-    I do a lot of <strong>programming</strong> and learning about programming AND <strong>start-ups</strong> in my spare time. I'm grateful I can do something I'm passionate about as my carrier. When I'm <u>not</u> working on any client projects, I'm working on <a href="http://pay-per-task.com/">PayPerTask.com</a>, which changes the way how you incentivise and pay your developers.
+    I do a lot of <strong>programming</strong> and learning about programming AND <strong>start-ups</strong> in my spare time. I'm grateful I can do something I'm passionate about as my career. When I'm <u>not</u> working on any client projects, I'm working on <a href="http://pay-per-task.com/">PayPerTask.com</a>, which changes the way you incentivise and pay your developers.
   </p>
 
   <p>
@@ -155,4 +155,21 @@
   <div class="text-center">
     <a role="button" href="mailto:{{email}}?subject={{emailSubject | encodeURIComponent}}&body={{emailBody | encodeURIComponent}}" class="btn btn-lg btn-success">Get in touch now!</a>
   </div>
+
+  <h2>Not looking now?<br><small>Subscribe to my mailing list and I'll notify you next time I'm available!</small></h2>
+  <form action="http://ppt.us3.list-manage1.com/subscribe/post" method="POST">
+    <input type="hidden" name="u" value="d56ce1cfbba4228b9cfa05d3c">
+    <input type="hidden" name="id" value="6481c1a632">
+
+    <label for="mailchimp_email_field">
+      What's your email address?
+    </label>
+
+    <input type="email" placeholder="you@yourcompany.com" autocapitalize="off" autocorrect="off" name="MERGE0" id="mailchimp_email_field" size="25" value="">
+
+    <!-- Mailchip robot trap. I changed it to type hidden from text just in case. -->
+    <input type="hidden" name="b_d56ce1cfbba4228b9cfa05d3c_6481c1a632" tabindex="-1" value=""></div>
+
+    <input type="submit" class="button" name="submit" value="Subscribe to list">
+  </form>
 </div>
