--- a/content/app.css
+++ b/content/app.css
@@ -36,13 +36,29 @@ h1 .mobile-portrait { display: none; }
 
 @media (max-width: 768px) and (orientation: landscape) {
   h1 .default { display: block; padding: 7px 0; }
-  a[role=button] { margin-left: auto; margin-right: auto; display: block; }
 }
 
 @media (max-width: 768px) and (orientation: portrait) {
   h1 .mobile-portrait { display: block; padding: 9px 0; }
   h1 .default { display: none; }
-  a[role=button] { margin-left: auto; margin-right: auto; display: block; }
+}
+
+@media (max-width: 768px) {
+  a[role=button], button[type=button] {
+    margin-left: auto; margin-right: auto; display: block;
+    font-size: 18px;
+  }
+}
+
+form input {
+  width: 100%; display: block;
+  margin-bottom: 10px;
+  line-height: 30px; font-size: 17px;
+  border: 1px solid #bbb;
+}
+
+.newsletter {
+  padding-bottom: 50px;
 }
 
 blockquote p {
@@ -57,16 +73,16 @@ blockquote p {
 
 /* Display error in case AngularJS app hasn't load */
 #show-delayed {
-    visibility: hidden;
-    -moz-animation: delayedShow 0s ease-in 10s forwards;
-    /* Firefox */
-    -webkit-animation: delayedShow 0s ease-in 10s forwards;
-    /* Safari and Chrome */
-    -o-animation: delayedShow 0s ease-in 10s forwards;
-    /* Opera */
-    animation: delayedShow 0s ease-in 10s forwards;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
+  visibility: hidden;
+  -moz-animation: delayedShow 0s ease-in 10s forwards;
+  /* Firefox */
+  -webkit-animation: delayedShow 0s ease-in 10s forwards;
+  /* Safari and Chrome */
+  -o-animation: delayedShow 0s ease-in 10s forwards;
+  /* Opera */
+  animation: delayedShow 0s ease-in 10s forwards;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
 }
 
 @keyframes delayedShow {
