Expand abbr on tap.

--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -5,7 +5,7 @@
 </h1>
 
 <div class="header">
-  <img src="/assets/james.png" class="img-rounded" align="left" width="100" />
+  <img src="/assets/james.png" class="img-rounded" align="left" width="100" on-tap="magicFn" />
 
   <p class="lead">
     Hi! My name is James and I'm a <mark>Ruby and JavaScript developer</mark>.<br>
