Previews of images.

--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -5,7 +5,7 @@
 </h1>
 
 <div class="header">
-  <img src="/assets/james.png" class="img-rounded" align="left" width="100" on-tap="magicFn" />
+  <img src="/assets/james_preview.png" class="img-rounded" align="left" />
 
   <p class="lead">
     Hi! My name is James and I'm a <mark>Ruby and JavaScript developer</mark>.<br>
@@ -121,7 +121,7 @@
   <h2>Testimonials</h2>
 
   <blockquote>
-    <img src="/assets/maciek.jpg" class="img-rounded" align="left" width="100" />
+    <img src="/assets/maciek_preview.jpg" class="img-rounded" align="left" />
     <p>
       I had the pleasure of working with James at NotOnTheHighStreet.com. He is really knowledgeable about technologies. Positive attitude, problem-solving skills, key technologies suggestions - to name just a few of many of his attributes and skills. He is passionate about his work and if you think about someone who can help you in any stage of your project - you think about James.
     </p>
