--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -121,7 +121,9 @@
   <h2>Testimonials</h2>
 
   <blockquote>
-    <img src="/assets/maciek_preview.jpg" class="img-rounded xxx" align="left" />
+    <div class="xxx">
+      <img src="/assets/maciek_preview.jpg" class="img-rounded" align="left" />
+    </div>
     <p>
       I had the pleasure of working with James at NotOnTheHighStreet.com. He is really knowledgeable about technologies. Positive attitude, problem-solving skills, key technologies suggestions - to name just a few of many of his attributes and skills. He is passionate about his work and if you think about someone who can help you in any stage of your project - you think about James.
     </p>
