--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -8,11 +8,17 @@
   <img src="/assets/james_preview.png" class="img-rounded" align="left" />
 
   <p class="lead">
-    Hi! My name is James and I'm a <mark>Ruby and JavaScript developer</mark>.<br>
-    I'm based in <mark>London</mark> and I work as a <mark>contractor</mark> on both remote and on-site projects.
-    <br>
-    <mark>I ♥ start-ups</mark> and I believe in constant learning, simplicity and doing worthwhile work.
-    <br>
+    <span>
+      Hi! My name is James and I'm a <mark>Ruby and JavaScript developer</mark>.
+    </span>
+
+    <span>
+      I'm based in <mark>London</mark> and I work as a <mark>contractor</mark> on both remote and on-site projects.
+    </span>
+
+    <span>
+      <mark>I ♥ start-ups</mark> and I believe in constant learning, simplicity and doing worthwhile work.
+    </span>
   </p>
 </div>
 
