Type submit NOT button dammit!

--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -182,7 +182,7 @@
           <!-- Mailchip robot trap. I changed it to type hidden. Robots don't go here unless they'd execute JS. -->
           <input type="hidden" name="b_d56ce1cfbba4228b9cfa05d3c_6481c1a632" tabindex="-1" value="" />
 
-          <button type="button" class="btn btn-large btn-block btn-primary" type="submit">Subscribe!</button>
+          <button type="submit" class="btn btn-large btn-block btn-primary" type="submit">Subscribe!</button>
         </form>
       </div>
     </div>
