Worth mentioning I guess.

--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -29,7 +29,7 @@
   </p>
 
   <p>
-    I contributed to many well-known projects such as rSpec and RubyGems and I have <strong>{{githubRepos}} <abbr title="Open-source software, free libraries and tools.">OSS</abbr> projects</strong> of my own.
+    I contributed to many well-known projects such as rSpec and RubyGems and I have <strong>{{githubRepos}} <abbr title="Open-source software, free libraries and tools.">OSS</abbr> projects</strong> of my own. I also spoke on a few events and conferences.
   </p>
 
   <p>
