No rate, more React.js these days.

--- a/content/templates/index.html
+++ b/content/templates/index.html
@@ -1,6 +1,6 @@
 <h1>
   James C Russell
-  <small class="default">Ruby, JavaScript &amp; Angular.js developer</small>
+  <small class="default">Ruby, JavaScript &amp; React.js developer</small>
   <small class="mobile-portrait">Ruby &amp; JavaScript developer</small>
 </h1>
 
@@ -25,7 +25,7 @@
 <div class="body">
   <h3><i class="fa fa-check"></i> I'm a top-notch developer ...</h3>
   <p>
-    I've been using <strong>Ruby for {{rubyYears}}+ years</strong>, <strong>JavaScript for {{jsYears}}+ years</strong> and <strong>Angular.js for {{angularYears}}+ years</strong>.
+    I've been using <strong>Ruby for {{rubyYears}}+ years</strong>, <strong>JavaScript for {{jsYears}}+ years</strong> and <strong>React.js for {{angularYears}}+ years</strong>.
   </p>
 
   <p>
@@ -113,7 +113,6 @@
     There's a lot of myths about contractors out there. I don't understand why.
     From my experience, contractors are usually the most knowledgeable people.
   </p>
-  -->
 
   <h3><i class="fa fa-check"></i> My rate is affordable ...</h3>
   <p>
@@ -123,6 +122,7 @@
   <p>
     I also <mark>discount remote work by 20%</mark> to £{{discountedRate}} per day or ${{discountedRateInUSD}} per hour, since it saves me time and expenses.
   </p>
+-->
 
   <h2>Testimonials</h2>
 
